force-app/main/default/objects/DocFab_User_Override__mdt/DocFab_User_Override__mdt.object-meta.xml
<CustomObject>
    <description>Per-user overrides for DocFab Record Model selection. Users in the User_Ids list will use the Override Record Model instead of the market default.</description>
    <label>DocFab User Override</label>
    <pluralLabel>DocFab User Overrides</pluralLabel>
</CustomObject>