force-app/main/default/objects/DocFab_User_Override__mdt/fields/Form_UUID_Override__c.field-meta.xml
<CustomField>
    <fullName>Form_UUID_Override__c</fullName>
    <description>Optional Form UUID override for these users. If set, overrides the Default Form UUID on the Record Model.</description>
    <label>Form UUID Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>