force-app/main/default/objects/DocFab_User_Override__mdt/fields/Override_Record_Model__c.field-meta.xml
<CustomField>
    <fullName>Override_Record_Model__c</fullName>
    <description>Reference to the DocFab Record Model to use for users in the User IDs list.</description>
    <label>Override Record Model</label>
    <referenceTo>DocFab_Record_Model__mdt</referenceTo>
    <relationshipLabel>User Overrides</relationshipLabel>
    <relationshipName>User_Overrides</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>