force-app/main/default/objects/DocFab_User_Override__mdt/fields/User_Ids__c.field-meta.xml
<CustomField>
    <fullName>User_Ids__c</fullName>
    <description>Comma-separated list of Salesforce User IDs that should use this override.</description>
    <label>User IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>